syntax = "proto3";

package penumbra.core.ibc.v1alpha1;

import "penumbra/core/crypto/v1alpha1/crypto.proto";

import "ibc/core/connection/v1/tx.proto";
import "ibc/core/channel/v1/tx.proto";
import "ibc/core/client/v1/tx.proto";
import "ibc/core/client/v1/client.proto";

import "google/protobuf/any.proto";

message IbcAction {
  /*
    oneof action {
      .ibc.core.connection.v1.MsgConnectionOpenInit connection_open_init = 1;
      .ibc.core.connection.v1.MsgConnectionOpenTry connection_open_try = 2;
      .ibc.core.connection.v1.MsgConnectionOpenAck connection_open_ack = 3;
      .ibc.core.connection.v1.MsgConnectionOpenConfirm connection_open_confirm = 4;

      .ibc.core.channel.v1.MsgChannelOpenInit channel_open_init = 5;
      .ibc.core.channel.v1.MsgChannelOpenTry channel_open_try = 6;
      .ibc.core.channel.v1.MsgChannelOpenAck channel_open_ack = 7;
      .ibc.core.channel.v1.MsgChannelOpenConfirm channel_open_confirm = 8;
      .ibc.core.channel.v1.MsgChannelCloseInit channel_close_init = 9;
      .ibc.core.channel.v1.MsgChannelCloseConfirm channel_close_confirm = 10;
      
      .ibc.core.channel.v1.MsgRecvPacket recv_packet = 11;
      .ibc.core.channel.v1.MsgTimeout timeout = 12;
      .ibc.core.channel.v1.MsgAcknowledgement acknowledgement = 13;

      .ibc.core.client.v1.MsgCreateClient create_client = 14;
      .ibc.core.client.v1.MsgUpdateClient update_client = 15;
      .ibc.core.client.v1.MsgUpgradeClient upgrade_client = 16;
      .ibc.core.client.v1.MsgSubmitMisbehaviour submit_misbehaviour = 17;
  }
  */
  .google.protobuf.Any raw_action = 1;
}

// FungibleTokenPacketData defines a struct for the packet payload
// See FungibleTokenPacketData spec:
// https://github.com/cosmos/ibc/tree/master/spec/app/ics-020-fungible-token-transfer#data-structures
message FungibleTokenPacketData {
  // the token denomination to be transferred
  string denom = 1;
  // the token amount to be transferred
  string amount = 2;
  // the sender address
  string sender = 3;
  // the recipient address on the destination chain
  string receiver = 4;
}

message Ics20Withdrawal {
  // the chain ID of the destination chain for this ICS20 transfer
  string destination_chain_id = 1;

  crypto.v1alpha1.Denom denom = 2;
  crypto.v1alpha1.Amount amount = 3;

  // the address on the destination chain to send the transfer to 
  string destination_chain_address = 4;

  // a "sender" penumbra address to use to return funds from this withdrawal.
  // this should be an ephemeral address
  crypto.v1alpha1.Address return_address = 5;

  // the height (on Penumbra) at which this transfer expires (and funds are sent
  // back to the sender address?). NOTE: if funds are sent back to the sender,
  // we MUST verify a nonexistence proof before accepting the timeout, to
  // prevent relayer censorship attacks. The core IBC implementation does this
  // in its handling of validation of timeouts.
  uint64 timeout_height = 6;

  // the timestamp at which this transfer expires.
  uint64 timeout_time = 7;

  // the source port that identifies the channel used for the withdrawal
  string source_port = 8;
  // the source channel used for the withdrawal
  string source_channel = 9;
}

message ClientData {
  string client_id = 1;
  google.protobuf.Any client_state = 2; // NOTE: left as Any to allow us to add more client types later
  string processed_time = 3;
  uint64 processed_height = 4;
}

message ClientCounter {
  uint64 counter = 1;
}

message ConsensusState {
  google.protobuf.Any consensus_state = 1;
}

message VerifiedHeights {
  repeated .ibc.core.client.v1.Height heights = 1; 
}

message ConnectionCounter {
  uint64 counter = 1;
}

message ClientConnections {
  repeated string connections = 1;
}
